# 2021_Summer_Internship

./: .gitignore
AFGSA/: DataLoader.py  Dataset.py  HDF5Constructor.py  loss.py  metric.py  model.py  preprocessing.py  random_train_set.py  test.py  train.py
DPCN/: DPCN.py  Dataset.py  Iter_Dataset.py  execute.py  iter_diffuse.py  iter_specular.py  test.py
FCN/: FCN.py  FCN_Origin.py  GetData.py
FCN/FCN_split/: FCN.py  GetData.py  test_input.exr
KCPN_new/source/: Dataset.py  diffuse.py  empty_dir.py  execute.py  gradient.py  make_dir.py  preprocessing.py  specular.py
KPCN/source/: CMakeLists.txt  Dataset.py  diffuse.py  execute.py  ops.cu  specular.py
KPCN/source/my_effort/: KPCN.py  KPCN_outofmemory.py  test.py
Paper_to_Hangul/: output.txt  trans.py
Raytracing/: CMakeLists.txt  image.ppm
Raytracing/src/InOneWeekend/: hittable.h  main.cc  material.h  sphere.h
Raytracing/src/common/: color.h  ray.h  rtweekend.h  vec3.h
pythorch_study/Pytorch_basic/: 2D_with_Pytorch.py  concatinating.py  max_argmax.py  squeeze.py  view.py
pytorch_study/01_Pytorch_basic/: 1D_with_Pytorch.py  1D_with_numpy.py  2D_with_numpy.py  Broadcasting.py  Tensor_operations.py
pytorch_study/02_Linear_regression/: 1_Implement.py  2_Autograd.py  3_Multivariable_Linear.py  4_modules_to_Linear.py  5_Pytorch_to_class.py  6_MiniBatch_Data_Load.py  7_Custom_Dataset.py
pytorch_study/03_Logistic_Regression/: 1_Implementation.py  2_modules_to_Logistic.py  3_pytorch_to_class.py
pytorch_study/04_Softmax_Regression/: 1_softmax_lowlevel.py  2_Lowlevel_implementation.py  3_Highlevel_implementation.py  4_module_implement.py  5_Class_implementation.py  6_Mnist_data.py  extra_work_class.py
pytorch_study/05_Perceptron/: 1_perceptron.py  2_one_layer_perceptron.py  3_multi_perceptron.py  4_decide_number.py  5_mnist_classify.py  6_decrease_complexity.py
pytorch_study/06_Convolutional_Neural_Network/: 1_CNN_Mnist_before_connect.py  2_CNN_Mnist_classify.py  3_Deep_CNN.py
pytorch_study/07_Save_Model/: Load_Model.py  Save_Model.py
